# OTUS-HW-2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
src/: main.cpp
src/ipaddr/: IIpAddress.h  IpAddress.cpp  IpAddress.h  IpV4.cpp  IpV4.h
src/package/: control.json
src/scripts/: deploy.sh
src/scripts/deploy/: deploy.sh
src/scripts/formatter/: .clang-format  format.sh
src/scripts/static_analyzer/clang/: static-analysis.sh
src/templates/singleton/: Singleton.h
src/tests/: CMakeLists.txt  TestData.cpp  TestData.h  main.cpp
src/util/: Utilities.cpp  Utilities.h
src/versioning/: ProjectVersion.h.in  Version.h  Version.json
